# thermalfunctions

./: .gitignore  LICENSE  README.md  fpm.toml
app/: main.f90
python/: MANIFEST.in  Makefile  README.md  fpm.toml  pyproject.toml
python/pythermalfunctions/: jexact.py  jspline.py
python/test/: compare_cosmoTransitions.py  test.py
src/: jexact.f90  jspline.f90  kinds.F90  kinds.f90  numpy.f90  pyjexact.f90  pyjspline.f90
