[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythermalfunctions"
version = "1.0.0"
description = "A python wrapper for thermalfunctions."
requires-python = ">=3.6"
authors = [
  { name = "Thomas Biekötter", email = "thomas.biekoetter@desy.de" }
]
dependencies = ["numpy", "cosmoTransitions"]
urls = { Homepage = "https://github.com/thomasbiekoetter/thermalfunctions" }

[tools.setuptools]
include-package-data = true

[tools.setuptools.packages.find]
where = ["."]
include = ["pythermalfunctions"]

[tools.setuptools.package-data]
"pycopa" = ["lib/*.so"]
